# blast

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.ini
.dbos/: credentials
.github/workflows/: nextjs.yml
blastai/: __init__.py  browser_session_patch.py  browser_use_patches.py  cache.py  cli.py  cli_config.py  cli_frontend.py  cli_installation.py  cli_process.py  config.py  default_config.yaml  engine.py  executor.py  logging_setup.py  models.py  planner.py  pricing_openai_api.json  resource_factory.py  resource_factory_utils.py  resource_manager.py  response.py  scheduler.py  secrets.py  server.py  server_api_chat_completions.py  server_api_realtime.py  server_api_responses.py  steel-docker-compose.yml  timing_tracker.py  tools.py  utils.py  vnc_utils.py
blastai/agents/: README.md  __init__.py  cfg_builder.py  codecheck.py  codecost.py  codefix.py  codegen.py  codegen_old.py  coderun.py  execution_hooks.py  executor.py  llm_factory.py  llm_streaming.py  local_python_executor.py  models.py  schema_utils.py  timing_tracker.py  tools_hitl.py  tools_smcp.py  tools_synthesis.py
blastai/frontend/: README.md  package.json
blastai/frontend/components/: ChatInput.tsx  Header.tsx  LoadingLogo.tsx  MarkdownRenderer.tsx  TaskBox.tsx
blastai/frontend/pages/: _app.tsx  index.tsx  test-markdown.tsx
blastai/frontend/styles/: globals.css
docs/: docs.json  index.mdx
eval/: tasks.txt
examples/: basics.py  blast_complex_research.py  blast_overhead.py  blast_resource_contention.py  data_parallelism.py  nl_planning.py  vnc.py  vnc_simple.py
experiments/: README.md  README_EXPERIMENTS.md  analyze_results.py  copy_loop_baselines.py  demo-experiment-config.yaml  evaluate_codegen.py  evaluate_codegen_old.py  evaluate_tools.py  generate_tools.py  logger.py  measure_actual_latency.py  measure_e2e_detailed.py  merge_results.py  parse_eval_results.py  plot_all_results.py  plot_rqs.py  regenerate_summary.py  run_evaluate_codegen.sh  run_experiment.sh  run_quick_eval.sh  runner.py  task_state_utils.py  utils.py  validate_tools.py
experiments/configs/: demo-experiment-config.yaml  my-experiment-config.yaml  testing-experiment-config.yaml
experiments/tasks/: __init__.py  accuracy.py  agisdk-real.yaml  base.py  dashdish.yaml  dashdish_custom_1.py  dashdish_custom_2.py  dashdish_custom_4.py  dashdish_custom_5.py  dashdish_custom_6.py  dashdish_custom_7.py  dashdish_custom_8.py  dashdish_custom_9.py  dashdish_deepresearch1.py  gomail.yaml  omnizon.yaml  registry.py  validation.py
experiments/tasks/agisdk/: agisdk.yaml  import_real.py
experiments/tasks/eval_scripts/: eval_dashdish_custom_3.py  eval_utils.py
experiments/tasks/llm_eval/: __init__.py  dashdish_custom_1.py  dashdish_custom_2.py  dashdish_custom_5.py  dashdish_custom_6.py  dashdish_custom_7.py  dashdish_custom_8.py  dashdish_custom_9.py  dashdish_deepresearch1.py  gomail_custom_1.py  omnizon_custom_3.py  omnizon_custom_4.py  omnizon_custom_6.py  omnizon_custom_7.py  zilloft_test_v1_7.py
experiments/tools/: dashdish.json  gitlab.json  gomail.json  omnizon.json  reddit.json
tests/: __init__.py  test_config.py  test_cost_tracking.py  test_error_logging.py
tests/benchmarks/: __init__.py  test_benchmark_multi_executors.py
tests/blastai/: test_complete_task.py
tests/experiments/: __init__.py  test_task_state_utils.py
website/: CNAME  index.html  next.config.js  package.json  tailwind.config.js
website/pages/: index.tsx
website/styles/: globals.css
(+27 files in other folders)
