[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blastai"
version = "0.1.1"
description = "Browser-LLM Auto-Scaling Technology"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Caleb Winston" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Browsers"
]
dependencies = [
    "pydantic>=2.0",
    "browser-use>=0.1.41",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "click>=8.0.0",
    "httpx>=0.24.0",
    "PyYAML>=6.0",
    "langchain_community>=0.3.20",
    "playwright>=1.41.0"
]

[project.urls]
Homepage = "https://github.com/stanford-mast/blast"
Documentation = "https://github.com/stanford-mast/blast#readme"
Issues = "https://github.com/stanford-mast/blast/issues"

[project.optional-dependencies]
web = []  # No Python dependencies needed for web frontend, requires Node.js/npm
dev = [
    "faker>=20.0.0",        # For generating test data
    "matplotlib>=3.8.0",    # For plotting results
    "tabulate>=0.9.0",      # For formatting test output
]

[project.scripts]
blastai = "blastai.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["blastai*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
blastai = [
    # Core frontend files needed for npm install and dev server
    "frontend/package.json",
    "frontend/next.config.js",
    "frontend/postcss.config.js",
    "frontend/tailwind.config.js",
    "frontend/tsconfig.json",
    # Source files
    "frontend/components/**/*.tsx",
    "frontend/pages/**/*.tsx",
    "frontend/styles/**/*.css",
    # Public assets needed at runtime
    "frontend/public/assets/*",
    # Config file
    "default_config.yaml"
]

[tool.setuptools.exclude-package-data]
blastai = [
    "frontend/node_modules/*",
    "frontend/.next/*",
    "frontend/out/*",
    "frontend/build/*",
    "frontend/.vercel/*",
    "frontend/.env*",
    "frontend/*.log",
    "frontend/*.tsbuildinfo",
    "frontend/package-lock.json",
    "__pycache__",
    "*.pyc",
    "*$py.class",
    ".git*",
    ".idea",
    ".vscode",
    "tests",
    "test",
    "docs"
]